2007-10-09  Atsushi Enomoto  <atsushi@ximian.com>

	* TypedDataSetGeneratorException.cs : only 2.0.

2007-10-02  Atsushi Enomoto  <atsushi@ximian.com>

	* TypedDataSetGenerator.cs, MethodSignatureGenerator.cs,
	  TypedDataSetGeneratorException.cs, ParameterGenerationOption.cs,
	  TypedDataSetSchemaImporterExtension.cs :
	  new stubs and implementations.
