@@ -1,3 +1,9 @@
+2008-01-11  Raja R Harinath  <harinath@hurrynot.org>
+
+	* TypedDataSetGenerator.cs: Remove mention of NET_3_5 -- the
+	enclosed methods are part of 2.0 SP1.
+	* TypedDataSetSchemaImporterExtension.cs: Likewise.
+
 2007-10-09  Atsushi Enomoto  <atsushi@ximian.com>
 
 	* TypedDataSetGeneratorException.cs : only 2.0.
